# praxis

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  AUDIT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  justfile  pyproject.toml
agent_factory/: .gitignore  CONSTITUTION.md  METHODOLOGY.md  README.md  pyproject.toml  seeded_checks.toml
agent_factory/.claude-plugin/: marketplace.json  plugin.json
agent_factory/docs/: af-memory-policy.md  agent-coding-factory-reference.md  agent-factory-vision.md  autonomous-progress-ledger.md  factory-local-components.md  factory-state-contract.md  praxis-and-how-we-use-it.md  praxis-gaps.md
agent_factory/docs/brainstorms/: 2026-06-27-planning-iteration-eval-redesign-requirements.md  2026-07-21-planning-time-rubric-seeding-requirements.md
agent_factory/docs/coverage-spine/: 00-overview.md  01-praxis-changes.md  02-planner.md  03-eval-agent.md  05-coverage-engine.md  06-validation-harness.md
agent_factory/docs/inspiration/: Developer-Ready Spec_ Team Mental Performance App (MVP).txt  Team Version Requirements.txt  Team Version — One-Screen Daily Flow.txt
agent_factory/docs/plans/: 2026-06-27-001-feat-af-fulfill-runtime-plan.md  2026-07-21-001-feat-graded-rubric-checks-plan.md  2026-07-21-002-feat-planning-time-rubric-seeding-plan.md  2026-07-22-001-feat-universal-minimalism-gate-plan.md  2026-07-22-002-feat-contract-negotiation-planning-hook-plan.md  2026-07-22-003-feat-resumability-probe-plan.md
agent_factory/domains/tax-1040-2025/: README.md  compute.yaml  fields.yaml  manifest.yaml  policy.yaml  requirements.yaml  rules.yaml  template.yaml
agent_factory/evals/: __init__.py  _json.py  case_def.py  checks.py  coverage.py  harvest.py  mutation.py  red_proof.py
agent_factory/evals/build_repro/: README.md  __init__.py  run_eval.py  score.py
agent_factory/evals/plan_repro/: README.md  _util.py  claude_cli.py  coverage.py  depth.py  llm_evaluator.py  planner.py  planning-checklist.yaml  praxis_source.py  run_eval.py  run_eval_pipeline.py  run_eval_subscription.py
agent_factory/hooks/: _gate_common.py  _graded_verify.py  _praxis.py  _ticket_state.py  build_completeness_gate.py  hooks.json  plan_completeness_gate.py
agent_factory/skills/af-build/: SKILL.md
agent_factory/skills/af-fulfill/: SKILL.md
agent_factory/skills/af-intake/: SKILL.md
agent_factory/skills/af-intake-build-validation/: SKILL.md
agent_factory/skills/af-intake-plan/: SKILL.md
agent_factory/skills/af-intake-plan-validation/: SKILL.md
agent_factory/skills/af-plan/: SKILL.md
agent_factory/skills/af-wireframe/: SKILL.md
agent_factory/src/agent_factory/: __init__.py  build_target.py  contract_signature.py  event_log.py  gate.py  graded_verdict.py  plan_gate.py  pool_lifecycle.py  resumability.py  (+6 more)
agent_factory/tests/: conftest.py  test_block_surfacing.py  test_build_gate_scenarios.py  test_build_target.py  test_candidate_discriminator.py  test_check_resolution_lanes.py  test_checks_space_seam.py  test_claude_cli.py  test_contract_signature.py  test_coverage_engine.py  test_doctor.py  test_eval_cases.py  test_event_log.py  test_floor_only_warning.py  test_gate_emit.py  test_gate_preflight.py  test_graded_verdict.py  test_graded_verify.py  test_harvest.py  test_llm_evaluator.py  test_loader_guard.py  test_manual_verify_gating.py  test_meta_coverage.py  test_mutation.py  test_plan_completeness_gate.py  test_plan_gate_check.py  test_plan_gate_contract.py  test_plan_gate_decisions.py  test_planner.py  test_planning_marker.py  test_pool_assembly_integration.py  test_pool_candidate_survival.py  test_pool_lifecycle.py  test_praxis_episode_wrappers.py  test_praxis_source.py  test_preflight.py  test_promote_universal_gating.py  test_red_proof.py  test_repro_build_target.py  test_repro_source_scope.py  (+18 more)
agent_factory/tools/: __init__.py  doctor.py  plan_gate_check.py  resolve_preview.py  rubric_adjust_review.py  whoami.py
(+967 files in other folders)
