[project]
name = "praxis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["knowledge", "frontend/tests"]
