[project]
name = "praxis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.49.0",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.28",
    "pgvector>=0.3",
    "mcp>=1.2",
    "pycognito>=2024.5",
    "scikit-learn>=1.9.0",
    "umap-learn>=0.5.12",
]

[project.scripts]
praxis-mcp = "knowledge.mcp.server:main"

[project.optional-dependencies]
# Phoenix/OpenTelemetry tracing — install with `uv sync --extra observability`.
observability = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "opentelemetry-sdk>=1.20",
]

[tool.pytest.ini_options]
pythonpath = [".", "frontend"]
testpaths = ["knowledge", "frontend/tests"]
