[project]
name = "praxis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.49.0",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.28",
    "pgvector>=0.3",
    "mcp>=1.2",
    "pycognito>=2024.5",
    "scikit-learn>=1.9.0",
    "umap-learn>=0.5.12",
    "pillow>=11.0",
    "psd-tools>=1.10",
    "imagehash>=4.3",
    "yoyo-migrations>=9.0.0",
    "slowapi>=0.1.10",
]

[project.scripts]
praxis-mcp = "knowledge.mcp.server:main"

[project.optional-dependencies]
# Phoenix/OpenTelemetry tracing — install with `uv sync --extra observability`.
observability = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "opentelemetry-sdk>=1.20",
    # Pair the exporter with the SDK so the default dev env can actually export
    # traces when PHOENIX_COLLECTOR_ENDPOINT is set; the SDK alone can't. Tracing
    # stays gated on that env var, so installing this never turns tracing on by itself.
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[tool.pytest.ini_options]
pythonpath = [".", "frontend"]
testpaths = ["knowledge", "frontend/tests"]
